--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -130,7 +130,7 @@ Using published research and new analyses, we evaluate how microclimate and leaf
 In closed-canopy forests, upper-canopy leaves are exposed to the highest solar radiation and evaporative demand, which can elevate leaf temperature (*T~leaf~*), particularly when transpirational cooling is curtailed by limited stomatal conductance.
 However, foliar traits also vary across height or light gradients, partially mitigating and protecting against the elevation of upper-canopy *T~leaf~*.
 Leaf metabolism generally increases with height across the vertical gradient, yet differences in thermal sensitivity across the gradient appear modest.
-Scaling from leaves to trees, tall trees have higher absolute metabolic capacity and growth, yet are disproportionately vulnerable to drought and damaging *T~leaf~*, particularly under climate change. 
+Scaling from leaves to trees, canopy trees have higher absolute metabolic capacity and growth, yet are more vulnerable to drought and damaging *T~leaf~* than their smaller counterparts, particularly under climate change. 
 In contrast, understory trees experience fewer extreme high *T~leaf~*'s but have fewer cooling mechanisms and thus may be strongly impacted by warming under some conditions, particularly when exposed to a harsher microenvironment through canopy disturbance.
 As the climate changes, integrating the patterns and mechanisms reviewed here into models will be critical to forecasting forest-climate feedbacks.
 
@@ -368,7 +368,7 @@ However, not enough studies have evaluated thermal tolerances across vertical gr
 Leaf phenology influences the vertical structure of microenvironments, *T~leaf~*, and forest photosynthetic capacity [@rey-sanchez_spatial_2016]. 
 In deciduous forests, the timing and extent of seasonal leaf gain and loss is structured across the vertical profile. 
 In temperate climates, seasonal warming occurs earlier in the sheltered understory, facilitating earlier spring bud-break compared to the cooler upper canopy [@augspurgerDifferencesLeafPhenology2003]. 
-Early leaf-out gives saplings and seedlings a window for disproportionately high photosynthesis -- contributing the majority of annual carbon fixation for some seedlings -- before canopy foliage and reduces light availability [@augspurgerDifferencesLeafPhenology2003; @leeSpringPhenologicalEscape2021]. 
+Early leaf-out gives saplings and seedlings a window for high photosynthesis before they are shaded by canopy leaves-- contributing the majority of annual carbon fixation for some seedlings -- before canopy foliage and reduces light availability [@augspurgerDifferencesLeafPhenology2003; @leeSpringPhenologicalEscape2021]. 
 Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals is greater in larger trees in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c].
 Similarly, fractions of deciduous species increase with tree size class [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
 Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct vertical patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019;@tangLightdrivenGrowthAmazon2017;@nunesForestFragmentationImpacts2022]. 
@@ -460,7 +460,7 @@ Tree metabolism and growth are shaped by crown location in the vertical gradient
 Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which strongly predicts tree transpiration  [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015] photosynthesis, and intra-canopy trait variation [@binLeafTraitExpression2022].
 Specifically, increases are linked to greater leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where leaves receive more light and have higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
 Photosynthate production is allocated among functions including respiration, aboveground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
-Among these, the best-studied process is aboveground woody growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but is disproportionately important to long-term forest dynamics and carbon cycling because woody tissues have a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
+Among these, the best-studied process is aboveground woody growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but, is critically important to long-term forest dynamics and carbon cycling because woody tissues have a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
 Radial stem growth may increase or decrease over time as trees grow in DBH depending on the light environment [@anderson-teixeiraJointEffectsClimate2022].
 In open forests and for open-growth individual trees, growth rate declines with DBH, whereas growth rate consistently increases with DBH for trees established in the understory of a closed-canopy forest [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraSizerelatedScalingTree2015;@anderson-teixeiraJointEffectsClimate2022]. 
 This points to a dominant role of vertical profiles in the biophysical environment, particularly light, in shaping tree growth rates within forests. 
@@ -541,8 +541,8 @@ Thus, despite their buffered microclimate, it is possible that understory trees 
 ### Canopy disturbance
 
 Increasing severity and frequency of heat waves, accompanied with increases in VPD and ET, place canopy trees at particularly elevated risk of mortality (section 5.1), potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
-Large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting, @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change [@ipccClimateChange20212021], and they are also targeted by selective logging [@millerReducedImpactLogging2011]. 
-Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
+Large trees are also the most vulnerable to other climate-related disturbances [e.g., wind, lighting, @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change [@ipccClimateChange20212021], and they are also targeted by selective logging [@millerReducedImpactLogging2011]. 
+Forest fragmentation also kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases radiation and temperatures within the forest [@juckerCanopyStructureTopography2018; @starkReframingTropicalSavannization2020]. 
 Such changes often enhance growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015; @nunesForestFragmentationImpacts2022], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
 However, this shift to hotter and drier microclimates makes some forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
@@ -551,7 +551,7 @@ Such dynamics will likely to be amplified by warming, such that climate change i
 
 Canopy disturbance poses an increasing threat to the biodiversity of understory species that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013a; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020].
-In the understory, warming disproportionately affects less thermally-adapted plant species, causing thermophilization of the plant community [@zellwegerForestMicroclimateDynamics2020b; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019].
+In the understory, warming reduces the abundance of less thermally-adapted plant species, causing thermophilization of the plant community [@zellwegerForestMicroclimateDynamics2020b; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019].
 If compositional shifts towards more thermally-adapted species fail to keep pace with warming, the ecosystem-level resilience to canopy disturbance that is often provided by smaller trees [e.g., @millerReducedImpactLogging2011] will be destroyed, resulting in breakdown of canopy structure and the potential state changes described above.
 
 ## Scaling across space and time 
