--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -126,7 +126,7 @@ Acknowledgments | 44	||
 <!--  200 word limit, no bullet points-->
 
 Rising temperatures are influencing forests on many scales, with potentially strong variation vertically across forest strata. 
-Using published research and new analyses, we evaluate how microclimate and leaf temperatures, traits, and gas exchange vary vertically in forests, shaping tree ecology and ecosystem function. 
+Using published research and new analyses, we evaluate how microclimate and leaf temperatures, traits, and gas exchange vary vertically in forests, shaping tree and ecosystem ecology. 
 In closed-canopy forests, upper-canopy leaves are exposed to the highest solar radiation and evaporative demand, which can elevate leaf temperature (*T~leaf~*), particularly when transpirational cooling is curtailed by limited stomatal conductance.
 However, foliar traits also vary across height or light gradients, partially mitigating and protecting against the elevation of upper-canopy *T~leaf~*.
 Leaf metabolism generally increases with height across the vertical gradient, yet differences in thermal sensitivity across the gradient appear modest.
